--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,django,vscode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,django,vscode
 .idea/
@@ -230,3 +231,4 @@ Thumbs.db #thumbnail cache on Windows
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/python,django,vscode
+db.sqlite3
